# PassageRayThroughPrismModel

./: CMakeLists.txt  README.md  config.json
include/adapters/: BoostDIInjector.hpp  JsonConfigLoader.hpp  SFMLRenderer.hpp
include/core/: IConfigLoader.hpp  IRenderer.hpp  Material.hpp  Polygon.hpp  Ray.hpp  RayTracer.hpp  Utils.hpp
src/: main.cpp
src/adapters/: BoostDIInjector.cpp  JsonConfigLoader.cpp  SFMLRenderer.cpp
src/core/: Material.cpp  Polygon.cpp  Ray.cpp  RayTracer.cpp
